# openswitch-infra-system-config

./: README.md  groups  install_modules.sh  modules.env  project.config  reviewers.config  roles.yaml  setup.cfg
aws/: update_hostname.sh
manifests/: site.pp
modules/openstack_project/files/gerrit/: ops-cla.html  ops-dco.html
modules/openstack_project/files/slave/: cmd-for-jenkins-user.sudo
modules/openstack_project/manifests/: analytics.pp  gerrit.pp  review_dev.pp  slave.pp  slave_common.pp  slave_vsi.pp  static.pp  thick_slave.pp  ticket.pp  users.pp  wiki.pp  zuul_dev.pp
modules/openstack_project/templates/: archive.vhost.erb  cleanup_jenkins.erb  wiki.vhost.erb
tools/: apply-test.sh  puppetmaster_bootstrap.sh
tools/atc/: email_stats.py
tools/branching_automation/: tagging_branch.sh
