[metadata]
name = openswitch-infra-config
summary = OpenSwitch Infrastructure Config
description-file =
    README.md
author = OpenSwitch Infrastructure Team
author-email = openswitch-infra@lists.openswitch.net
home-page = http://ci.openswitch.net/
classifier =
    Environment :: OpenSwitch
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true
